--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "allowJs": true,
-    "strict": false,
+    "strict": true,
     "target": "ESNext",
     "module": "ESNext"
   },
